更新 2025-09-25-物理实验报告.md

--- a/_posts/2025-09-25-物理实验报告.md
+++ b/_posts/2025-09-25-物理实验报告.md
@@ -65,4 +65,4 @@ markdown格式打物理符号很方便也很简单，网上教程也一大堆可
 
 我是大一下第一次做实验报告时琢磨出来的方法，中间也有流程简化和工具取舍，这个方案到今天感觉已经达到了一个可用的程度。希望能帮到现在正受困于实验报告书写的你
 
-![img](/img/Image_1709447970798.jpg)
+!(/img/Image_1709447970798.jpg)[img]
