更新 2025-09-25-物理实验报告.md

--- a/_posts/2025-09-25-物理实验报告.md
+++ b/_posts/2025-09-25-物理实验报告.md
@@ -35,7 +35,7 @@ tags: [技术, 学习生活]
 
 - 首先是word不适合理科报告书写的问题，我选择直接使用论文写作时会用到的markdown格式，个人用的是typdown编辑器微软商店里就有（免费）
 
-<img class="shadow" src="/img/ 2025-09-25-1.png" width="700">
+![img](https://github.com/yuki-1317/yuki-1317.github.io/blob/master/img%2F%202025-09-25-1.png)
 
 markdown格式打物理符号很方便也很简单，网上教程也一大堆可以自己学习。
 
