--- a/_posts/忙里偷闲.md
+++ b/_posts/忙里偷闲.md
@@ -1,18 +1,20 @@
---- 
-
+---
 layout: post
 
 title: "忙里偷闲"
 
-subtitle: "日常，非技术"
+subtitle: "随便说说"
 
-date: 2025-10-26
+date: 2025-10-26 
 
 author: "yukino"
 
-tags: [闲谈]
+tags: [闲聊]
 
---- 
+
+
+---
+
 好久没写博客了，主要是最近要期中考试了复习有点费时间啊，本来课就多，单单要考试的“主要课”就足足有六七门（好多啊，我天），而且还有你光电院神奇三合一，即电路，数电，模电合一，作为第一年的小白鼠课件是老的，课容量是不变的，唯一变化的是，我们半个学期内容比别人一个学期还要多半个模电，这咋复习，只能说及格就好，属于是奢望了。
 
 最近又想了想，现在这个githubpages的博客还是有问题的，虽然单纯的文字都能比较快的加载出来，但是如果文章中加入图片速度就不行了，我在想该怎么办（问的ai），是直接使用国内的图片url不把图片存在项目里了，但这样图片就得专门找地方放，那还不如直接全部都迁移过来，或者加速一下用国内的CDN。其实都是可以琢磨琢磨的，但是感觉最近一个月没啥时间啊，大学生怎们能没有时间了，和小时候说的不一样啊。天啊，我要是既有时间又有money就好了。
